--- a/JS Tuần 3/Phone/index.html
+++ b/JS Tuần 3/Phone/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoang Tan Nam</title>
+    <title>NewPhone</title>
     <!-- Thêm liên kết đến tệp CSS của Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
